# cc-pyscript

./: .gitignore  404.html  CHANGELOG.rst  LICENSE  Pipfile  README.rst  about.html  changelog.html  cookiecutter.json  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorial.html
.github/workflows/: ci-test-matrix.yml
_images/: graphviz-d4d7be3033b21801dec716d92521e38aa3a29f3d.png.map
docs/: about.rst  conf.py  index.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_defaults.py  test_options.py  test_testutils.py  toxtest.py
{{ cookiecutter.repo_name }}/: .travis.yml  CHANGELOG.rst  LICENSE  Pipfile  README.rst  setup.cfg  setup.py  tox.ini
{{ cookiecutter.repo_name }}/.github/workflows/: ci-test-matrix.yml
{{ cookiecutter.repo_name }}/docs/: conf.py  index.rst  modules.rst
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: {{ cookiecutter.script_name }}.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name.py }}/: {{ cookiecutter.script_name }}.py
{{ cookiecutter.repo_name }}/tests/: test_{{cookiecutter.script_name}}.py
